<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainScroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:id="@+id/root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="24dp">

...
                    android:src="@drawable/ic_mobile_2_24px"
                    android:scaleType="fitCenter"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:layout_marginEnd="20dp" />

                <Button
                    android:id="@+id/bOpenOther"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/open_other"
                    android:backgroundTint="?attr/colorPrimary"
                    android:textColor="?attr/colorOnPrimary"
                    style="@style/Widget.BookPlayer.Button.Primary" />
...
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_librivox_24"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:layout_marginEnd="20dp" />

                <Button
                    android:id="@+id/bOpenAudiobooks"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/open_audiobooks"
                    android:backgroundTint="?attr/colorPrimary"
                    android:textColor="?attr/colorOnPrimary"
                    style="@style/Widget.BookPlayer.Button.Primary" />
...
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_tts_24"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:layout_marginEnd="20dp" />

                <Button
                    android:id="@+id/bOpenEbooks"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/browse_ebooks"
                    android:backgroundTint="?attr/colorPrimary"
                    android:textColor="?attr/colorOnPrimary"
                    style="@style/Widget.BookPlayer.Button.Primary" />
...
                    android:src="@drawable/ic_cloud_download_24px"
                    android:scaleType="fitCenter"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:layout_marginEnd="20dp" />

                <Button
                    android:id="@+id/bDirectLink"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/direct_link"
                    style="@style/Widget.BookPlayer.Button.Secondary" />
            </LinearLayout>
        </LinearLayout>
...
