<?xml version="1.0" encoding="utf-8"?>
<!-- pure-flavor override of app/src/main/res/menu/bottom_nav_menu.xml: no Radio/Podcasts tabs
     (network content sources not offered in this flavor) - Library, Add, Settings only. -->
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_library"
        android:title="@string/nav_library"
        android:icon="@drawable/ic_books_movies_and_music_24px" />

    <item
        android:id="@+id/nav_add"
        android:title="@string/nav_add_book"
        android:icon="@drawable/ic_add_book_24" />

    <item
        android:id="@+id/nav_settings"
        android:title="@string/nav_settings"
        android:icon="@drawable/ic_settings_24" />

</menu>
